<resources>
    <string name="bt_music">BT Music</string>
    <string name="online_music">Online Music</string>
    <string name="usb_music">USB Music</string>
    <string name="audio_name_default">No music</string>
    <string name="no_music">No music</string> <!-- same as prev one -->
    <string name="sum_song">(Totalling %1$1d tracks)</string>
    <string name="usb_no_data">No tracks</string>
    <string name="music_no_lyrics">No lyrics</string>
    <string name="music_search">Search</string>
    <string name="button_ok">OK</string>
    <string name="button_deny">Cancel</string>
    <string name="text_play_mode_single_loop">Switch to single cycle mode</string>
    <string name="text_play_mode_list_loop">Switch to list cycle mode</string>
    <string name="text_play_mode_random">Switch to random play mode</string>
    <string name="scanned_sum_song">%1$1d track scanned</string> <!-- singular -->
    <string name="scanned_sum_songs">%1$1d tracks scanned</string> <!-- plural -->
    <string name="usb_music_please_wait">Please wait</string>
    <string name="scanning_completed">Scanning finished</string>
    <string name="music_song_list_sum">Play all</string>
    <string name="usb_disk_folder">USB folder</string>
    <string name="music_play_current_folder">Play list</string>
    <string name="usb_music_search_empty">No results related to %1$1s</string>
    <string name="bt_check_settings_tv">Please check the bluetooth settings of your mobile phone</string>
    <string name="bt_device_name">"Bluetooth device name: "</string>
    <string name="default_bt_device_name">Unknown</string> <!-- ref next one-->
    <string name="nick_name_default">Unknown-unknown</string>
    <string name="audio_name">Song name</string>
    <string name="song_name">Singer</string>
    <string name="connect_bt_tv"> Please connect mobile phone bluetooth to use this function </string>
    <string name="bt_open_a2dp_permission_tv">Please open bluetooth connection permission of system settings</string>
    <string name="open_bt_a2dp_permission_tv">Bluetooth media permission is turned on</string>
    <string name="bt_sheet_tv"> Playlist not acquired </string>
    <string name="connect_usb_tv"> Please insert the USB flash drive and try again! </string>
    <string name="connect_bt">Connect BT</string>
    <string name="music_text_lrc_empty">No lyrics were found</string>
    <string name="music_playback_error">Music playback error</string>
    <string name="first_usb_label_name">USB 1</string>
    <string name="second_usb_label_name">USB 2</string>
    <string name="switch_to_bt">Switch to BT？</string>
    <string name="search_content_cannot_empty">Search content cannot be empty</string>
    <string name="music_file_problem">The current music cannot be played</string>
    <string name="aa_connect_tv">Please disconnect Android Auto before using</string>
    <string name="song_num">Play %1$d song in total</string>
    <string name="bt_music_not_provided">Not Provided</string>
    <string name="under_development">Features under development</string>
    <string name="music_text_lrc_loading">The lyrics being obtained…</string>

    <string name="app_name" translatable="false">Music</string>
    <string name="player_time_default" translatable="false">0:00</string>
    <string name="music_subtitle_splicer" translatable="false"> — </string>

</resources>
